--- a/src/pages/AdminDashboardPage/AdminDashboardPage.css
+++ b/src/pages/AdminDashboardPage/AdminDashboardPage.css
@@ -1,3 +1,10 @@
+@media (min-width: 576px) {
+    .h-sm-100 {
+        height: 100%;
+    }
+}
+
+
 #card-container {
     display: flex; 
     justify-content: center;
@@ -10,3 +17,8 @@
     width: 75%; 
     gap: 0.5rem; 
 }
+
+#dashboard-footer {
+    width: 74.5%; 
+}
+
