--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,4 +1,4 @@
-/* @media (min-width: 576px) {
+@media (min-width: 576px) {
     .h-sm-100 {
         height: 100%;
     }
@@ -20,5 +20,4 @@
 
 #dashboard-footer {
     width: 74.5%; 
-} */
-
+}
