--- a/src/components/dashboard/ContributorsList/ContributorsList.css
+++ b/src/components/dashboard/ContributorsList/ContributorsList.css
@@ -60,12 +60,17 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between; 
-    align-items: center;
+    /* align-items: center; */
 }
 
-.card-text:last-child {
-    margin-bottom: 1;
+.left-p {
+    margin-bottom: 0;
 }
+
+/* #data-div {
+    display: flex; 
+    align-items: center;
+} */
 
 
 
