--- a/src/components/dashboard/ContributorsList/ContributorsList.css
+++ b/src/components/dashboard/ContributorsList/ContributorsList.css
@@ -60,7 +60,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between; 
-    /* align-items: center; */
+    padding: 0 1.5rem 0 1.5rem; 
 }
 
 .left-p {
