--- a/src/components/dashboard/ContributorsList/ContributorsList.css
+++ b/src/components/dashboard/ContributorsList/ContributorsList.css
@@ -52,7 +52,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    padding: 0 2rem 0 2rem; 
+    /* padding: 0 2rem 0 2rem;  */
     
 }
 
