main page better

--- a/src/components/dashboard/DashboardCardSm/DashboardCardSm.css
+++ b/src/components/dashboard/DashboardCardSm/DashboardCardSm.css
@@ -1,4 +1,4 @@
-.dashboard-cards {
+/* .dashboard-cards {
     display: flex; 
     flex-direction: row;
     justify-content: space-around;
@@ -7,4 +7,4 @@
 
 .dashboard-text {
     font-size: 14px;
-}
+} */
