--- a/src/components/dashboard/Main/Main.css
+++ b/src/components/dashboard/Main/Main.css
@@ -13,10 +13,10 @@
     height: 100%; 
 }
 
-#card-box {
+/* #card-box {
     width: 65%; 
     gap: 0.5rem; 
-}
+} */
 
 #dashboard-footer {
     width: 64.5%; 
