--- a/src/components/dashboard/Main/Main.css
+++ b/src/components/dashboard/Main/Main.css
@@ -9,7 +9,7 @@
     display: flex; 
     justify-content: center;
     justify-content: space-evenly;
-    background-color: rgb(223, 221, 221);
+    background-color: white(255, 255, 255);
     height: 100%; 
 }
 
