--- a/src/components/dashboard/Main/Main.css
+++ b/src/components/dashboard/Main/Main.css
@@ -5,7 +5,7 @@
 }
 
 
-.card-container {
+/* .card-container {
     display: flex; 
     justify-content: center;
     justify-content: space-evenly;
@@ -18,6 +18,6 @@
     gap: 0.5rem; 
 } */
 
-#dashboard-footer {
+/* #dashboard-footer {
     width: 64.5%; 
-}
+} */ 
