--- a/src/pages/dashboard/AdminDashboardPage/AdminDashboardPage.css
+++ b/src/pages/dashboard/AdminDashboardPage/AdminDashboardPage.css
@@ -1,24 +1,8 @@
-/* @media (min-width: 576px) {
+@media (min-width: 576px) {
     .h-sm-100 {
         height: 100%;
     }
-}
+} 
 
 
-#card-container {
-    display: flex; 
-    justify-content: center;
-    justify-content: space-evenly;
-    background-color: rgb(223, 221, 221);
-    height: 100%; 
-}
-
-#card-box {
-    width: 75%; 
-    gap: 0.5rem; 
-}
-
-#dashboard-footer {
-    width: 74.5%; 
-} */
 
