articles list re-designed

--- a/src/components/dashboard/ArticlesList/ArticlesList.css
+++ b/src/components/dashboard/ArticlesList/ArticlesList.css
@@ -1,4 +1,4 @@
-#articles-list-main-container {
+/* #articles-list-main-container {
     display: flex; 
     justify-content: center;
     background-color: rgb(223, 221, 221);
@@ -17,4 +17,4 @@
 
 .left-p {
     margin-bottom: 0;
-}
+} */
