--- a/src/components/dashboard/TableMain/TableMain.css
+++ b/src/components/dashboard/TableMain/TableMain.css
@@ -1,4 +1,4 @@
-@media (max-width: 674px) {
+/* @media (max-width: 674px) {
     .tableTest {
       position: fixed;
     }
@@ -8,4 +8,4 @@
     .tableTest {
       position:sticky;  
     }
-  }
+  } */
