--- a/src/components/Magazine/ArticleCard/ArticleCard.css
+++ b/src/components/Magazine/ArticleCard/ArticleCard.css
@@ -4,9 +4,17 @@
   cursor: pointer;
 }
 
-.card-img-top {
+/* .card-img-top {
   width: 100%;
   height: 15vw;
   object-fit: cover;
+} */
+
+@media only screen and (min-width: 800px) {
+  .card-img-top {
+    width: 100%;
+  height: 15vw;
+  object-fit: cover;
+  }
 }
 
